syntax = "proto3";

package transcription;

option java_multiple_files = true;
option java_package = "jku.multimediasysteme.grpc.transcription";

message TranscriptChunk {
  string userId = 1;
  string description = 2;
  string summaryText = 3;
}

service TranscriptionPersistenceService {
  rpc StreamTranscription(stream TranscriptChunk) returns (TranscriptionUploadResult);
}

message TranscriptionUploadResult {
  string message = 1;
  string transcriptionId = 2;
}